--- a/.github/workflows/publish_image.yml
+++ b/.github/workflows/publish_image.yml
@@ -3,11 +3,19 @@ on:
   push:
     tags:
         - v1.*
+  workflow_dispatch: # Manual trigger
+    inputs:
+      image_tag:
+        description: 'Manually provided value for tag.'
+        required: true
+        type: string
 
+permissions: read-all
 env:
   REGISTRY_USER: ${{ github.actor }}
   REGISTRY_PASSWORD: ${{ github.token }}
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
+  IMAGE_TAG: ${{ startsWith(inputs.image_tag, 'v') || github.ref_name }}
 
 jobs:
   build:
@@ -30,7 +38,7 @@ jobs:
         uses: redhat-actions/buildah-build@v2
         with:
           image: simple-flask
-          tags: latest ${{ github.ref_name }} ${{ github.sha }}
+          tags: latest ${{ env.IMAGE_TAG }} ${{ github.sha }}
           containerfiles: |
             ./Dockerfile
 
