--- a/.github/workflows/publish_image.yml
+++ b/.github/workflows/publish_image.yml
@@ -21,6 +21,8 @@ jobs:
   build:
     name: Build image and push to ghcr.io
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
     steps:
       # Log in to GitHub Container Registry (GHCR)
       - name: Log in to ghcr.io
