chore: Remove uv from container and bump up version.
Signed-off-by: Paulo Vital <paulo.vital@ibm.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "simple-flask"
-version = "0.1.0"
-description = "Add your description here"
+version = "0.2.0"
+description = "Simple Flask container app."
 requires-python = ">=3.12"
 dependencies = [
     "flask>=3.1.0",
